# android_kernel_lenovo_a6010

./: .gitignore  MAINTAINERS  Makefile  dtbToolCM  make-koffee.sh  patchlevel.txt  update_defconfig.sh
Documentation/: kernel-parameters.txt
anykernel_a6000/: anykernel.sh  early-mount.patch
arch/: Kconfig
block/: Kconfig.iosched  bfq-cgroup.c  bfq-iosched.c  blk-cgroup.c  blk-cgroup.h  blk-core.c  blk-settings.c  blk-sysfs.c  blk-throttle.c  cfq-iosched.c  deadline-iosched.c  elevator.c  fiops-iosched.c  genhd.c
crypto/: Kconfig  Makefile  ablkcipher.c  adiantum.c  algapi.c  algif_skcipher.c  api.c  chacha20_generic.c  chacha20poly1305.c  crypto_user.c  crypto_wq.c  pcrypt.c  testmgr.c  testmgr.h
drivers/: Kconfig  Makefile
fs/: Kconfig  Makefile  aio.c  binfmt_elf.c  binfmt_misc.c  bio-integrity.c  bio.c  block_dev.c  buffer.c  compat.c  compat_binfmt_elf.c  compat_ioctl.c  dcache.c  eventpoll.c  exec.c  fcntl.c  file.c  file_table.c  fs-writeback.c  fs_struct.c  inode.c  internal.h  libfs.c  locks.c  mount.h  namei.c  namespace.c  nsfs.c  open.c  pnode.c  pnode.h  proc_namespace.c  read_write.c  reboot_auto_fsync.c  select.c  splice.c  super.c  sync.c  timerfd.c  (+2 more)
ureadahead/: Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.ac
ureadahead/debian/: changelog  control  rules  ureadahead.dirs  ureadahead.postinst  ureadahead.postrm
ureadahead/man/: ureadahead.8
ureadahead/po/: POTFILES.in  ureadahead.pot
ureadahead/src/: Makefile.am  Makefile.in  errors.h  file.c  file.h  pack.c  pack.h  trace.c  trace.h  ureadahead.c  values.c  values.h
(+2126 files in other folders)
